@@ -214,6 +214,19 @@ name|lucene
 operator|.
 name|util
 operator|.
+name|Accountable
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
 name|InfoStream
 import|;
 end_import
@@ -227,6 +240,8 @@ class|class
 name|DocumentsWriter
 implements|implements
 name|Closeable
+implements|,
+name|Accountable
 block|{
 DECL|field|directory
 specifier|private
@@ -2840,6 +2855,21 @@ argument_list|(
 name|event
 argument_list|)
 expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|ramBytesUsed
+specifier|public
+name|long
+name|ramBytesUsed
+parameter_list|()
+block|{
+return|return
+name|flushControl
+operator|.
+name|ramBytesUsed
+argument_list|()
+return|;
 block|}
 DECL|class|ApplyDeletesEvent
 specifier|static
