@@ -102,6 +102,19 @@ name|lucene
 operator|.
 name|util
 operator|.
+name|Accountable
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
 name|BytesRef
 import|;
 end_import
@@ -113,6 +126,8 @@ DECL|class|DocumentsWriterDeleteQueue
 specifier|final
 class|class
 name|DocumentsWriterDeleteQueue
+implements|implements
+name|Accountable
 block|{
 DECL|field|tail
 specifier|private
@@ -1582,10 +1597,12 @@ argument_list|()
 expr_stmt|;
 block|}
 block|}
-DECL|method|bytesUsed
+annotation|@
+name|Override
+DECL|method|ramBytesUsed
 specifier|public
 name|long
-name|bytesUsed
+name|ramBytesUsed
 parameter_list|()
 block|{
 return|return
