@@ -38,15 +38,6 @@ name|java
 operator|.
 name|util
 operator|.
-name|List
-import|;
-end_import
-begin_import
-import|import
-name|java
-operator|.
-name|util
-operator|.
 name|Iterator
 import|;
 end_import
@@ -57,6 +48,15 @@ operator|.
 name|util
 operator|.
 name|LinkedList
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
 import|;
 end_import
 begin_import
@@ -115,6 +115,19 @@ name|lucene
 operator|.
 name|util
 operator|.
+name|Accountable
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
 name|InfoStream
 import|;
 end_import
@@ -139,6 +152,8 @@ DECL|class|DocumentsWriterFlushControl
 specifier|final
 class|class
 name|DocumentsWriterFlushControl
+implements|implements
+name|Accountable
 block|{
 DECL|field|hardMaxBytesPerDWPT
 specifier|private
@@ -1782,12 +1797,28 @@ name|documentsWriter
 operator|.
 name|deleteQueue
 operator|.
-name|bytesUsed
+name|ramBytesUsed
 argument_list|()
 operator|+
 name|bufferedUpdatesStream
 operator|.
-name|bytesUsed
+name|ramBytesUsed
+argument_list|()
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|ramBytesUsed
+specifier|public
+name|long
+name|ramBytesUsed
+parameter_list|()
+block|{
+return|return
+name|getDeleteBytesUsed
+argument_list|()
+operator|+
+name|netBytes
 argument_list|()
 return|;
 block|}
