@@ -458,6 +458,19 @@ name|lucene
 operator|.
 name|util
 operator|.
+name|Accountable
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
 name|Bits
 import|;
 end_import
@@ -554,6 +567,8 @@ implements|implements
 name|Closeable
 implements|,
 name|TwoPhaseCommit
+implements|,
+name|Accountable
 block|{
 DECL|field|UNBOUNDED_MAX_MERGE_SEGMENTS
 specifier|private
@@ -1223,6 +1238,25 @@ block|}
 block|}
 return|return
 name|r
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|ramBytesUsed
+specifier|public
+specifier|final
+name|long
+name|ramBytesUsed
+parameter_list|()
+block|{
+name|ensureOpen
+argument_list|()
+expr_stmt|;
+return|return
+name|docWriter
+operator|.
+name|ramBytesUsed
+argument_list|()
 return|;
 block|}
 comment|/** Holds shared SegmentReader instances. IndexWriter uses    *  SegmentReaders for 1) applying deletes, 2) doing    *  merges, 3) handing out a real-time reader.  This pool    *  reuses instances of the SegmentReaders in all these    *  places if it is in "near real-time mode" (getReader()    *  has been called on this instance). */
@@ -9484,7 +9518,7 @@ literal|" bytesUsed="
 operator|+
 name|bufferedUpdatesStream
 operator|.
-name|bytesUsed
+name|ramBytesUsed
 argument_list|()
 argument_list|)
 expr_stmt|;
@@ -9626,31 +9660,6 @@ argument_list|(
 name|segmentInfos
 argument_list|)
 expr_stmt|;
-block|}
-comment|/** Expert:  Return the total size of all index files currently cached in memory.    * Useful for size management with flushRamDocs()    */
-DECL|method|ramSizeInBytes
-specifier|public
-specifier|final
-name|long
-name|ramSizeInBytes
-parameter_list|()
-block|{
-name|ensureOpen
-argument_list|()
-expr_stmt|;
-return|return
-name|docWriter
-operator|.
-name|flushControl
-operator|.
-name|netBytes
-argument_list|()
-operator|+
-name|bufferedUpdatesStream
-operator|.
-name|bytesUsed
-argument_list|()
-return|;
 block|}
 comment|// for testing only
 DECL|method|getDocsWriter
